k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 9145503154/auth-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: backend-service
# spec:
#   selector:
#     app: backend
#   ports:
#     - port: 8000

apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30008
